Fixed rssi at 1 meter alignment issues in acnBeacon screen

--- a/app/src/main/assets/resources/html_resources/newStyles.css
+++ b/app/src/main/assets/resources/html_resources/newStyles.css
@@ -196,7 +196,7 @@
 
 #acn-beacon-rssi-st-dev {
     font-size : 28px;
-    width : 90px;
+    width : 150px;
     text-align : center;
 }
 
